--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "app-factory-template",
-  "version": "1.0.0",
-  "private": true,
+  "version": "1.0.2",
   "description": "app-factory-template",
   "scripts": {
     "build:weapp": "taro build --type weapp",
@@ -25,7 +24,9 @@
     "@tarojs/taro-h5": "^1.1.5",
     "@tarojs/taro-swan": "^1.1.5",
     "@tarojs/taro-weapp": "^1.1.5",
-    "nervjs": "^1.3.5"
+    "@tarojs/webpack-runner": "^1.1.9",
+    "nervjs": "^1.3.5",
+    "taro-ui": "^1.5.1"
   },
   "devDependencies": {
     "@types/react": "^16.4.6",
