--- a/package.json
+++ b/package.json
@@ -1,41 +1,37 @@
 {
-  "name": "app-factory-template",
-  "version": "1.0.2",
-  "description": "app-factory-template",
+  "name": "HanClouds App",
+  "version": "1.0.0",
+  "private": true,
+  "description": "",
   "scripts": {
-    "build:weapp": "taro build --type weapp",
-    "build:swan": "taro build --type swan",
-    "build:alipay": "taro build --type alipay",
-    "build:h5": "taro build --type h5",
-    "build:rn": "taro build --type rn",
-    "dev:weapp": "npm run build:weapp -- --watch",
-    "dev:swan": "npm run build:swan -- --watch",
-    "dev:alipay": "npm run build:alipay -- --watch",
-    "dev:h5": "npm run build:h5 -- --watch",
-    "dev:rn": "npm run build:rn -- --watch"
+    "dev": "taro build --type h5 -- --watch",
+    "build": "node build/build.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tarojs/components": "^1.1.5",
-    "@tarojs/router": "^1.1.5",
-    "@tarojs/taro": "^1.1.5",
-    "@tarojs/taro-alipay": "^1.1.5",
-    "@tarojs/taro-h5": "^1.1.5",
-    "@tarojs/taro-swan": "^1.1.5",
-    "@tarojs/taro-weapp": "^1.1.5",
-    "@tarojs/webpack-runner": "^1.1.9",
-    "nervjs": "^1.3.5",
-    "taro-ui": "^1.5.1"
+    "@tarojs/components": "^1.2.0-beta.16",
+    "@tarojs/router": "^1.2.0-beta.16",
+    "@tarojs/taro": "^1.2.0-beta.16",
+    "@tarojs/taro-alipay": "^1.2.0-beta.16",
+    "@tarojs/taro-h5": "^1.2.0-beta.16",
+    "@tarojs/taro-swan": "^1.2.0-beta.16",
+    "@tarojs/taro-tt": "^1.2.0-beta.16",
+    "@tarojs/taro-weapp": "^1.2.0-beta.16",
+    "ncp": "^2.0.0",
+    "nerv-devtools": "^1.3.9",
+    "nervjs": "^1.3.9",
+    "shelljs": "^0.8.1",
+    "taro-ui": "1.5.3"
   },
   "devDependencies": {
     "@types/react": "^16.4.6",
     "@types/webpack-env": "^1.13.6",
-    "@tarojs/plugin-babel": "^1.1.5",
-    "@tarojs/plugin-csso": "^1.1.5",
-    "@tarojs/plugin-less": "^1.1.5",
-    "@tarojs/plugin-uglifyjs": "^1.1.5",
-    "@tarojs/webpack-runner": "^1.1.5",
+    "@tarojs/plugin-babel": "^1.2.0-beta.16",
+    "@tarojs/plugin-csso": "^1.2.0-beta.16",
+    "@tarojs/plugin-less": "^1.2.0-beta.16",
+    "@tarojs/plugin-uglifyjs": "^1.2.0-beta.16",
+    "@tarojs/webpack-runner": "^1.2.0-beta.16",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
@@ -43,9 +39,11 @@
     "babel-preset-env": "^1.6.1",
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
-    "eslint-config-taro": "^1.1.5",
+    "eslint-config-taro": "^1.2.0-beta.16",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-taro": "^1.1.5"
+    "eslint-plugin-taro": "^1.2.0-beta.16",
+    "eslint-plugin-typescript": "^0.12.0",
+    "typescript": "^3.0.1"
   }
 }
